apps/05-home-apps/01-external-apps/blocky.yml
kind: Service
apiVersion: v1
metadata:
  name: pi-2-blocky
  namespace: ingress
  labels:
    app.kubernetes.io/name: pi-2-blocky
spec:
  type: ClusterIP
  ports:
    - name: metrics
      port: 4000
      targetPort: 4000
---
kind: Endpoints
apiVersion: v1
metadata:
  name: pi-2-blocky
  namespace: ingress
  labels:
    app.kubernetes.io/name: pi-2-blocky
subsets:
  - addresses:
    - ip: 192.168.1.12
    ports:
      - name: metrics
        port: 4000
