apps/05-home-apps/01-external-apps/protect-exporter.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: protect-exporter
  namespace: monitor
  labels:
    app.kubernetes.io/name: protect-exporter
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: protect-exporter
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: protect-exporter
    spec:
      containers:
      - name: exporter
        image: ghcr.io/hoomy-official/exporter-unifi-protect:v0.0.6
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9090
          name: exporter
        securityContext:
          runAsUser: 1000
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          seccompProfile:
            type: "RuntimeDefault"
          capabilities:
            drop: ["ALL"]
        livenessProbe:
          tcpSocket:
            port: exporter
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 5
          failureThreshold: 5
          successThreshold: 1
        readinessProbe:
          httpGet:
            path: /metrics
            port: exporter
          initialDelaySeconds: 10
          timeoutSeconds: 1
          periodSeconds: 5
          failureThreshold: 10
          successThreshold: 1
---
apiVersion: v1
kind: Service
metadata:
  name: protect-exporter
  namespace: monitor
  labels:
    app.kubernetes.io/name: protect-exporter
spec:
  selector:
    app.kubernetes.io/name: protect-exporter
  ports:
    - name: exporter
      port: 9090
      targetPort: exporter
  type: ClusterIP
